--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,8 +2,11 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
+    </style>
+    <!-- Base Splash theme. -->
+    <style name="BootTheme" parent="AppTheme">
+        <item name="android:background">@drawable/bootsplash</item>
     </style>
 
 </resources>
