See file CHANGELOG.md ##2019-03-12 13:28

--- a/android/app/src/main/res/drawable/bootsplash.xml
+++ b/android/app/src/main/res/drawable/bootsplash.xml
@@ -6,7 +6,7 @@
   <item>
     <!-- the app logo, centered horizontally and vertically -->
     <bitmap
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/welcome_final"
         android:gravity="center" />
   </item>
 </layer-list>
